Fix: Litle refactoring

--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DependancyResolution\DependencyResolution.csproj" />
     <ProjectReference Include="..\EFInfrastructure\Infrastructure.EF.csproj" />
   </ItemGroup>
 
