--- a/DomainTest/DomainTest.csproj
+++ b/DomainTest/DomainTest.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\EFInfrastructure\Infrastructure.EF.csproj" />
   </ItemGroup>
 
 </Project>
